@@ -57,6 +57,7 @@ PROGRAMMER * pgm_new(void)
   pgm->type[0] = 0;
   pgm->config_file[0] = 0;
   pgm->lineno = 0;
+  pgm->baudrate = 0;
 
   for (i=0; i<N_PINS; i++)
     pgm->pinno[i] = 0;
